--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="modal">
                     <button type="button" class="close-button" data-modal-close>
                         <svg class="close-icon">
-                            <use href="./photos/icons.svg#icon-close-black"></use>
+                            <use class="icon-var" href="./photos/icons.svg#icon-close-black"></use>
                         </svg>
                     </button>
 
@@ -68,14 +68,14 @@
                         <h2 class="title-window">Оставьте свои данные, мы вам перезвоним</h2>
                         <div class="form-field">
                             <label for="name">Имя</label>
-                            <svg width="12px" height="12px" class="input-icon">
+                            <svg width="12" height="12" class="input-icon">
                                 <use href="./photos/icons.svg#icon-user"></use>
                             </svg>
                             <input id="name" type="text" name="user-name" />
                         </div>
 
                         <div class="form-field">
-                            <svg width="13px" height="13px" class="input-icon">
+                            <svg width="13" height="13" class="input-icon">
                                 <use href="./photos/icons.svg#icon-tel"></use>
                             </svg>
                             <label for="phone"> Телефон</label>
@@ -84,11 +84,10 @@
                         </div>
 
                         <div class="form-field">
-                            <svg class="input-icon" width="15px" height="13px" class="input-icon">
+                            <svg width="15" height="13" class="input-icon">
                                 <use href="./photos/icons.svg#icon-mail-2"></use>
                             </svg>
                             <label for="mail"> Почта</label>
-
                             <input id="mail" type="email" name="user-email" />
                         </div>
 
