--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
 
                         </div>
                         <div class="div-box">
-                            <input id="check" name="user-check" value="agree" class="check-box" type="checkbox" />
-                            <label for="check" class="text-box">Соглашаюсь с рассылкой и принимаю
+                            <label for="check" class="text-box">
+                                <input id="check" name="user-check" value="agree" class="check-box" type="checkbox" />
+                                <span class="check-icon"></span>
+                                Соглашаюсь с рассылкой и принимаю
                                 <Span class="text-color"> Условия
                                     договора </Span></label>
                             <button type="submit" class="model-window-btn">Отправить</button>
