--- a/index.html
+++ b/index.html
@@ -68,27 +68,26 @@
                         <h2 class="title-window">Оставьте свои данные, мы вам перезвоним</h2>
                         <div class="form-field">
                             <label for="name">Имя</label>
+                            <input class="input-style" id="name" type="text" name="user-name" />
                             <svg width="12" height="12" class="input-icon">
                                 <use href="./photos/icons.svg#icon-user"></use>
                             </svg>
-                            <input id="name" type="text" name="user-name" />
                         </div>
 
                         <div class="form-field">
-                            <svg width="13" height="13" class="input-icon">
-                                <use href="./photos/icons.svg#icon-tel"></use>
-                            </svg>
                             <label for="phone"> Телефон</label>
-                            <input id="phone" type="tel" name="user-phone" />
-
+                            <input class="input-style" id="phone" type="tel" name="user-phone" />
+                            <svg width="13" height="13" class="input-icon">
+                                <use class="icon-focus" href="./photos/icons.svg#icon-tel"></use>
+                            </svg>
                         </div>
 
                         <div class="form-field">
+                            <label for="mail"> Почта</label>
+                            <input class="input-style" id="mail" type="email" name="user-email" />
                             <svg width="15" height="13" class="input-icon">
                                 <use href="./photos/icons.svg#icon-mail-2"></use>
                             </svg>
-                            <label for="mail"> Почта</label>
-                            <input id="mail" type="email" name="user-email" />
                         </div>
 
                         <div class="form-field">
